// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creating Components from Fela rules should allow nested theme objects 1`] = `
Array [
  "<style>
    ._ddrzz3 {
        color: black
    }

    ._xn368k {
        font-size: 16
    }
</style>",
  <rule>
    <rule
        _felaTheme={
            Object {
                "header": Object {
                  "color": "black",
                },
              }
        }
    >
        <div
            className="_ddrzz3 _xn368k"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should compose passThrough props 1`] = `
Array [
  "<style></style>",
  <FelaComponent
    color="red"
    onClick={[Function]}
>
    <FelaComponent
        _felaTheme={Object {}}
        color="red"
        onClick={[Function]}
    >
        <FelaComponent
            _felaRule={[Function]}
            color="red"
            onClick={[Function]}
            passThrough={
                Array [
                    "onClick",
                  ]
            }
        >
            <FelaComponent
                _felaRule={[Function]}
                _felaTheme={Object {}}
                color="red"
                onClick={[Function]}
                passThrough={
                    Array [
                        "onClick",
                      ]
                }
            >
                <div
                    className=""
                    color="red"
                    onClick={[Function]}
                />
            </FelaComponent>
        </FelaComponent>
    </FelaComponent>
</FelaComponent>,
]
`;

exports[`Creating Components from Fela rules should compose styles 1`] = `
Array [
  "<style>
    ._sjf8sr {
        color: red
    }

    ._lsppwc {
        font-size: 16px
    }

    ._tzgruh {
        line-height: 1.2
    }
</style>",
  <anotherRule>
    <anotherRule
        _felaTheme={Object {}}
    >
        <rule
            _felaRule={[Function]}
            passThrough={Array []}
        >
            <rule
                _felaRule={[Function]}
                _felaTheme={Object {}}
                passThrough={Array []}
            >
                <div
                    className="_sjf8sr _lsppwc _tzgruh"
                />
            </rule>
        </rule>
    </anotherRule>
</anotherRule>,
]
`;

exports[`Creating Components from Fela rules should extend the rule properties with a function 1`] = `
Array [
  "<style>
    ._t2jx0m {
        color: blue
    }

    ._1u2zkpq {
        font-size: 14px
    }

    ._p2crlx {
        background-color: red
    }
</style>",
  <rule
    bgColor="red"
    extend={[Function]}
>
    <rule
        _felaTheme={Object {}}
        bgColor="red"
        extend={[Function]}
    >
        <div
            className="_t2jx0m _1u2zkpq _p2crlx"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should extend the rule properties with an object 1`] = `
Array [
  "<style>
    ._t2jx0m {
        color: blue
    }

    ._1u2zkpq {
        font-size: 14px
    }

    ._p2crlx {
        background-color: red
    }
</style>",
  <rule
    extend={
        Object {
            "backgroundColor": "red",
            "fontSize": "14px",
          }
    }
>
    <rule
        _felaTheme={Object {}}
        extend={
            Object {
                "backgroundColor": "red",
                "fontSize": "14px",
              }
        }
    >
        <div
            className="_t2jx0m _1u2zkpq _p2crlx"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should include defaultProps if provided 1`] = `
Array [
  "<style>
    ._sjf8sr {
        color: red
    }

    ._xn368k {
        font-size: 16
    }
</style>",
  <rule
    color="red"
>
    <rule
        _felaTheme={Object {}}
        color="red"
    >
        <Comp
            className="_sjf8sr _xn368k"
            color="red"
        >
            <div
                className="_sjf8sr _xn368k"
            >
                red
            </div>
        </Comp>
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should not pass props to the element 1`] = `
Array [
  "<style>
    ._fh8qsu {
        color: true
    }

    ._xn368k {
        font-size: 16
    }
</style>",
  <rule
    color={true}
    onClick={false}
    onHover={true}
>
    <rule
        _felaTheme={Object {}}
        color={true}
        onClick={false}
        onHover={true}
    >
        <div
            className="_fh8qsu _xn368k"
            onClick={false}
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should only use passed props to render Fela rules 1`] = `
Array [
  "<style>
    ._ddrzz3 {
        color: black
    }

    ._lsppwc {
        font-size: 16px
    }
</style>",
  <rule
    color="black"
    data-foo={true}
>
    <rule
        _felaTheme={Object {}}
        color="black"
        data-foo={true}
    >
        <div
            className="_ddrzz3 _lsppwc"
            data-foo={true}
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should only use the rule name as displayName 1`] = `
Array [
  "<style>
    ._sjf8sr {
        color: red
    }

    ._xn368k {
        font-size: 16
    }
</style>",
  <Button
    as="button"
>
    <Button
        _felaTheme={Object {}}
        as="button"
    >
        <button
            className="_sjf8sr _xn368k"
        />
    </Button>
</Button>,
]
`;

exports[`Creating Components from Fela rules should pass all props to the element 1`] = `
Array [
  "<style>
    ._xn368k {
        font-size: 16
    }
</style>",
  <rule
    data-foo={true}
    onClick={false}
>
    <rule
        _felaTheme={Object {}}
        data-foo={true}
        onClick={false}
    >
        <div
            className="_xn368k"
            data-foo={true}
            onClick={false}
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should pass extended special props to the component 1`] = `
Array [
  "<style>
    ._sjf8sr {
        color: red
    }

    ._xn368k {
        font-size: 16
    }
</style>",
  <rule
    color="blue"
    testProp={
        Object {
            "tabIndex": "-1",
          }
    }
>
    <rule
        _felaTheme={Object {}}
        color="blue"
        testProp={
            Object {
                "tabIndex": "-1",
              }
        }
    >
        <UnderlyingComp
            className="_sjf8sr _xn368k"
            testProp={
                Object {
                    "tabIndex": "-1",
                  }
            }
        >
            <div>
                testProp exists
            </div>
        </UnderlyingComp>
    </rule>
</rule>,
  <rule
    color="blue"
>
    <rule
        _felaTheme={Object {}}
        color="blue"
    >
        <UnderlyingComp
            className="_sjf8sr _xn368k"
        >
            <div>
                testProp does not exist
            </div>
        </UnderlyingComp>
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should pass special props to the component 1`] = `
Array [
  "<style>
    ._t2jx0m {
        color: blue
    }

    ._xn368k {
        font-size: 16
    }

    ._sjf8sr {
        color: red
    }
</style>",
  <rule
    as="i"
    color="blue"
>
    <rule
        _felaTheme={Object {}}
        as="i"
        color="blue"
    >
        <i
            className="_t2jx0m _xn368k"
        />
    </rule>
</rule>,
  <rule
    color="blue"
>
    <rule
        _felaTheme={Object {}}
        color="blue"
    >
        <div
            className="_sjf8sr _xn368k"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should pass style, as, id, className and innerRef to composed components 1`] = `
Array [
  "<style>
    ._1q2qxab {
        color: green
    }

    ._lsppwc {
        font-size: 16px
    }

    ._tzgruh {
        line-height: 1.2
    }
</style>",
  <anotherRule
    as="i"
    color="green"
>
    <anotherRule
        _felaTheme={Object {}}
        as="i"
        color="green"
    >
        <rule
            _felaRule={[Function]}
            as="i"
            color="green"
            passThrough={Array []}
        >
            <rule
                _felaRule={[Function]}
                _felaTheme={Object {}}
                as="i"
                color="green"
                passThrough={Array []}
            >
                <i
                    className="_1q2qxab _lsppwc _tzgruh"
                />
            </rule>
        </rule>
    </anotherRule>
</anotherRule>,
]
`;

exports[`Creating Components from Fela rules should render fela rules depending on the passed props 1`] = `
Array [
  "<style>
    ._ddrzz3 {
        color: black
    }

    ._xn368k {
        font-size: 16
    }
</style>",
  <rule
    color="black"
>
    <rule
        _felaTheme={Object {}}
        color="black"
    >
        <div
            className="_ddrzz3 _xn368k"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components from Fela rules should use a dev-friendly className and the selectorPrefix 1`] = `
Array [
  "<style>
    .Fela-Button_div__abrv9k {
        font-size: 16
    }
</style>",
  <Button>
    <Button
        _felaTheme={Object {}}
    >
        <div
            className="Fela-Button_div__abrv9k"
        />
    </Button>
</Button>,
]
`;

exports[`Creating Components from Fela rules should use a dev-friendly className with monolithic renderer 1`] = `
Array [
  "<style>
    .Button_div__abrv9k {
        font-size: 16
    }
</style>",
  <Button>
    <Button
        _felaTheme={Object {}}
    >
        <div
            className="Button_div__abrv9k"
        />
    </Button>
</Button>,
]
`;

exports[`Creating Components from Fela rules should use the theme for static rendering by default 1`] = `
Array [
  "<style>
    ._sjf8sr {
        color: red
    }

    ._xn368k {
        font-size: 16
    }
</style>",
  <rule>
    <rule
        _felaTheme={
            Object {
                "color": "red",
              }
        }
    >
        <div
            className="_sjf8sr _xn368k"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should allow nested theme objects 1`] = `
Array [
  "<style>
    ._ddrzz3 {
        color: black
    }

    ._xn368k {
        font-size: 16
    }
</style>",
  <rule>
    <rule
        _felaTheme={
            Object {
                "header": Object {
                  "color": "black",
                },
              }
        }
    >
        <div
            className="_ddrzz3 _xn368k"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should compose passThrough props 1`] = `
Array [
  "<style></style>",
  <FelaComponent
    color="red"
    onClick={[Function]}
>
    <FelaComponent
        _felaTheme={Object {}}
        color="red"
        onClick={[Function]}
    >
        <FelaComponent
            _felaRule={[Function]}
            color="red"
            onClick={[Function]}
            passThrough={
                Array [
                    "onClick",
                    "onClick",
                    "color",
                  ]
            }
        >
            <FelaComponent
                _felaRule={[Function]}
                _felaTheme={Object {}}
                color="red"
                onClick={[Function]}
                passThrough={
                    Array [
                        "onClick",
                        "onClick",
                        "color",
                      ]
                }
            >
                <div
                    className=""
                    color="red"
                    onClick={[Function]}
                />
            </FelaComponent>
        </FelaComponent>
    </FelaComponent>
</FelaComponent>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should compose styles 1`] = `
Array [
  "<style>
    ._sjf8sr {
        color: red
    }

    ._lsppwc {
        font-size: 16px
    }

    ._tzgruh {
        line-height: 1.2
    }
</style>",
  <anotherRule>
    <anotherRule
        _felaTheme={Object {}}
    >
        <rule
            _felaRule={[Function]}
            passThrough={Array []}
        >
            <rule
                _felaRule={[Function]}
                _felaTheme={Object {}}
                passThrough={Array []}
            >
                <div
                    className="_sjf8sr _lsppwc _tzgruh"
                />
            </rule>
        </rule>
    </anotherRule>
</anotherRule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should not pass props used in rules to the element 1`] = `
Array [
  "<style>
    ._fh8qsu {
        color: true
    }

    ._xn368k {
        font-size: 16
    }
</style>",
  <rule
    color={true}
    data-foo={true}
    onClick={false}
>
    <rule
        _felaTheme={Object {}}
        color={true}
        data-foo={true}
        onClick={false}
    >
        <div
            className="_fh8qsu _xn368k"
            data-foo={true}
            onClick={false}
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should only use passed props to render Fela rules 1`] = `
Array [
  "<style>
    ._ddrzz3 {
        color: black
    }

    ._lsppwc {
        font-size: 16px
    }
</style>",
  <rule
    color="black"
    data-foo={true}
>
    <rule
        _felaTheme={Object {}}
        color="black"
        data-foo={true}
    >
        <div
            className="_ddrzz3 _lsppwc"
            color="black"
            data-foo={true}
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should only use the rule name as displayName 1`] = `
Array [
  "<style>
    ._sjf8sr {
        color: red
    }

    ._xn368k {
        font-size: 16
    }
</style>",
  <Button
    as="button"
>
    <Button
        _felaTheme={Object {}}
        as="button"
    >
        <button
            className="_sjf8sr _xn368k"
        />
    </Button>
</Button>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should pass all props to the element 1`] = `
Array [
  "<style>
    ._xn368k {
        font-size: 16
    }
</style>",
  <rule
    data-foo={true}
    onClick={false}
>
    <rule
        _felaTheme={Object {}}
        data-foo={true}
        onClick={false}
    >
        <div
            className="_xn368k"
            data-foo={true}
            onClick={false}
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should pass props except innerRef 1`] = `
Array [
  "<style>
    ._ddrzz3 {
        color: black
    }

    ._lsppwc {
        font-size: 16px
    }
</style>",
  <rule
    color="black"
    innerRef={[Function]}
>
    <rule
        _felaTheme={Object {}}
        color="black"
        innerRef={[Function]}
    >
        <div
            className="_ddrzz3 _lsppwc"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should pass props used in rules specified in passThroughProps to the element 1`] = `
Array [
  "<style>
    ._fh8qsu {
        color: true
    }

    ._xn368k {
        font-size: 16
    }
</style>",
  <rule
    color={true}
    data-foo={true}
    onClick={false}
>
    <rule
        _felaTheme={Object {}}
        color={true}
        data-foo={true}
        onClick={false}
    >
        <div
            className="_fh8qsu _xn368k"
            color={true}
            data-foo={true}
            onClick={false}
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should render fela rules depending on the passed props 1`] = `
Array [
  "<style>
    ._ddrzz3 {
        color: black
    }

    ._xn368k {
        font-size: 16
    }
</style>",
  <rule
    color="black"
>
    <rule
        _felaTheme={Object {}}
        color="black"
    >
        <div
            className="_ddrzz3 _xn368k"
        />
    </rule>
</rule>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should use a dev-friendly className and the selectorPrefix 1`] = `
Array [
  "<style>
    .Fela-Button_div__abrv9k {
        font-size: 16
    }
</style>",
  <Button>
    <Button
        _felaTheme={Object {}}
    >
        <div
            className="Fela-Button_div__abrv9k"
        />
    </Button>
</Button>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should use a dev-friendly className with monolithic renderer 1`] = `
Array [
  "<style>
    .Button_div__abrv9k {
        font-size: 16
    }
</style>",
  <Button>
    <Button
        _felaTheme={Object {}}
    >
        <div
            className="Button_div__abrv9k"
        />
    </Button>
</Button>,
]
`;

exports[`Creating Components with a Proxy for props from Fela rules should use the theme for static rendering by default 1`] = `
Array [
  "<style>
    ._ddrzz3 {
        color: black
    }

    ._xn368k {
        font-size: 16
    }
</style>",
  <rule>
    <rule
        _felaTheme={
            Object {
                "color": "black",
              }
        }
    >
        <div
            className="_ddrzz3 _xn368k"
        />
    </rule>
</rule>,
]
`;
